--- a/MetaCom/app/src/main/res/layout/fragment_main.xml
+++ b/MetaCom/app/src/main/res/layout/fragment_main.xml
@@ -3,6 +3,7 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@color/colorFirst"
                 tools:context="com.metarhia.metacom.activities.MainFragment">
 
     <LinearLayout
@@ -17,7 +18,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabGravity="fill"
-            app:tabMaxWidth="0dp"/>
+            app:tabMaxWidth="0dp"
+            app:tabSelectedTextColor="@color/colorSecond"
+            app:tabTextColor="@color/colorSecond"/>
 
         <android.support.v4.view.ViewPager
             android:id="@+id/view_pager"
