--- a/MetaCom/app/src/main/res/layout/message_in.xml
+++ b/MetaCom/app/src/main/res/layout/message_in.xml
@@ -13,7 +13,7 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/tiny_margin"
         android:layout_marginStart="@dimen/tiny_margin"
-        android:src="@drawable/ic_error_black_24dp"
+        android:src="@drawable/ic_error_24dp"
         android:visibility="gone"/>
 
     <RelativeLayout
