--- a/MetaCom/app/src/main/res/layout/bottom_notice.xml
+++ b/MetaCom/app/src/main/res/layout/bottom_notice.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="?actionBarSize"
     android:layout_alignParentBottom="true"
-    android:padding="@dimen/small_margin">
+    android:padding="@dimen/small_margin"
+    app:cardBackgroundColor="@color/colorFirst">
 
     <TextView
         android:id="@+id/bottom_notice_text"
@@ -14,7 +16,7 @@
         android:fontFamily="sans-serif-light"
         android:text=""
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/colorAccent"
         android:textSize="@dimen/text_size"/>
 
 </android.support.v7.widget.CardView>
