--- a/MetaCom/app/src/main/res/layout/fragment_chat.xml
+++ b/MetaCom/app/src/main/res/layout/fragment_chat.xml
@@ -2,6 +2,7 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@color/colorFirst"
                 android:focusableInTouchMode="true"
                 tools:context=".activities.chat.ChatFragment">
 
@@ -14,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
         android:layout_alignParentBottom="true"
-        android:background="@color/white"
+        android:background="@color/black"
         android:elevation="@dimen/small_margin">
 
         <ImageView
@@ -25,7 +26,7 @@
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:layout_margin="@dimen/small_margin"
-            android:src="@drawable/ic_attach_file_black_24dp"/>
+            android:src="@drawable/ic_attach_file_24dp"/>
 
         <TextView
             android:id="@+id/send"
@@ -36,7 +37,8 @@
             android:layout_centerVertical="true"
             android:layout_margin="@dimen/small_margin"
             android:fontFamily="sans-serif-light"
-            android:text="@string/send"/>
+            android:text="@string/send"
+            android:textColor="@color/colorAccent"/>
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/input_message"
@@ -53,7 +55,7 @@
             android:hint="@string/new_message"
             android:imeOptions="actionDone"
             android:inputType="textCapSentences"
-            android:textColor="@color/black"
+            android:textColor="@color/colorSecond"
             android:textColorHint="@color/greyDark"
             android:textSize="@dimen/text_size"/>
 
