--- a/MetaCom/app/src/main/res/layout/toolbar.xml
+++ b/MetaCom/app/src/main/res/layout/toolbar.xml
@@ -2,7 +2,7 @@
 <android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
-                                            android:background="@color/white"
+                                            android:background="@color/colorFirst"
                                             android:orientation="vertical">
 
     <LinearLayout
@@ -17,7 +17,7 @@
             android:layout_height="20dp"
             android:layout_gravity="center"
             android:layout_margin="@dimen/small_margin"
-            android:src="@drawable/ic_arrow_back_black_24dp"/>
+            android:src="@drawable/ic_arrow_back_24dp"/>
 
         <TextView
             android:id="@+id/toolbar_title"
@@ -28,7 +28,7 @@
             android:fontFamily="sans-serif-light"
             android:maxLines="1"
             android:text=""
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="@dimen/text_size"/>
     </LinearLayout>
 
