--- a/MetaCom/app/src/main/res/layout/fragment_main.xml
+++ b/MetaCom/app/src/main/res/layout/fragment_main.xml
@@ -17,6 +17,7 @@
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:tabBackground="@color/grey800"
             app:tabGravity="fill"
             app:tabMaxWidth="0dp"
             app:tabSelectedTextColor="@color/colorSecond"
