--- a/MetaCom/app/src/main/res/layout/fragment_upload_file_dialog.xml
+++ b/MetaCom/app/src/main/res/layout/fragment_upload_file_dialog.xml
@@ -2,6 +2,7 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
+              android:background="@color/grey800"
               android:orientation="vertical"
               android:padding="@dimen/small_margin"
               tools:context=".activities.files.DownloadFileDialog">
@@ -13,6 +14,6 @@
         android:layout_margin="@dimen/small_margin"
         android:fontFamily="sans-serif-light"
         android:text="@string/upload_desc"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="@dimen/text_size"/>
 </LinearLayout>
