resize layout when keyboard is open #6 temporarily disable landscape mode

--- a/MetaCom/app/src/main/res/layout/fragment_connection.xml
+++ b/MetaCom/app/src/main/res/layout/fragment_connection.xml
@@ -20,7 +20,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/big_margin"
+            android:layout_marginTop="@dimen/small_margin"
             android:fontFamily="sans-serif"
             android:text="@string/app_name"
             android:textAlignment="center"
@@ -31,7 +31,7 @@
             android:id="@+id/host"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/big_margin"
+            android:layout_marginTop="@dimen/small_margin"
             android:completionThreshold="1"
             android:fontFamily="sans-serif-light"
             android:hint="@string/connection_host"
@@ -45,7 +45,7 @@
             android:id="@+id/port"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/big_margin"
+            android:layout_marginTop="@dimen/small_margin"
             android:fontFamily="sans-serif-light"
             android:hint="@string/connection_port"
             android:inputType="number"
@@ -57,7 +57,7 @@
             android:id="@+id/submit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/big_margin"
+            android:layout_marginTop="@dimen/small_margin"
             android:clickable="true"
             android:enabled="true"
             android:fontFamily="sans-serif"
