--- a/MetaCom/app/src/main/res/layout/message_in.xml
+++ b/MetaCom/app/src/main/res/layout/message_in.xml
@@ -40,7 +40,7 @@
             android:fontFamily="sans-serif-light"
             android:linksClickable="true"
             android:text=""
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textColorLink="@color/colorAccent"
             android:textSize="@dimen/text_size"/>
 
