--- a/MetaCom/app/src/main/res/layout/fragment_connection.xml
+++ b/MetaCom/app/src/main/res/layout/fragment_connection.xml
@@ -15,7 +15,7 @@
             android:id="@+id/icon_image"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:src="@drawable/logo"/>
+            android:src="@drawable/metarhia_logo"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -38,7 +38,7 @@
             android:imeOptions="actionNext"
             android:inputType="text"
             android:textColor="@color/colorSecond"
-            android:textColorHint="@color/greyLight"
+            android:textColorHint="@color/grey"
             android:textSize="@dimen/text_size"/>
 
         <android.support.design.widget.TextInputEditText
@@ -50,7 +50,7 @@
             android:hint="@string/connection_port"
             android:inputType="number"
             android:textColor="@color/colorSecond"
-            android:textColorHint="@color/greyLight"
+            android:textColorHint="@color/grey"
             android:textSize="@dimen/text_size"/>
 
         <TextView
@@ -62,7 +62,7 @@
             android:enabled="true"
             android:fontFamily="sans-serif"
             android:text="@string/connect"
-            android:textColor="@color/greyDark"
+            android:textColor="@color/grey"
             android:textSize="@dimen/text_size"/>
 
         <ProgressBar
@@ -70,7 +70,7 @@
             android:layout_width="15dp"
             android:layout_height="15dp"
             android:layout_margin="@dimen/small_margin"
-            android:indeterminateTint="@color/greyDark"
+            android:indeterminateTint="@color/grey"
             android:indeterminateTintMode="src_atop"
             android:visibility="invisible"/>
     </LinearLayout>
