--- a/MetaCom/app/src/main/res/layout/fragment_upload_file_dialog.xml
+++ b/MetaCom/app/src/main/res/layout/fragment_upload_file_dialog.xml
@@ -2,7 +2,7 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:background="@color/grey800"
+              android:background="@color/black14"
               android:orientation="vertical"
               android:padding="@dimen/small_margin"
               tools:context=".activities.files.DownloadFileDialog">
