--- a/MetaCom/app/src/main/res/values/colors.xml
+++ b/MetaCom/app/src/main/res/values/colors.xml
@@ -3,20 +3,19 @@
     <!--<color name="colorPrimary">#3F51B5</color>-->
     <!--<color name="colorPrimaryDark">@color/grey</color>-->
     <color name="colorAccent">@color/orange</color>
-    <color name="colorFirst">@color/grey850</color>
+    <color name="colorFirst">@color/black6</color>
     <color name="colorSecond">@color/white</color>
 
     <color name="black">#000000</color>
-    <color name="white">#FFFFFF</color>
-    <color name="greyLight">#CCCCCC</color>
-    <color name="greyDark">#888888</color>
-    <color name="red">#FF0000</color>
-    <color name="lightBlue600">#039BE5</color>
-    <color name="orange">#ff8533</color>
-    <color name="dullOrange">#ffb380</color>
-    <color name="grey">#4d4d4d</color>
+    <color name="black6">#060606</color>
+    <color name="black14">#1c1c1c</color>
 
-    <color name="grey900">#212121</color>
-    <color name="grey850">#303030</color>
-    <color name="grey800">#424242</color>
+    <color name="white">#FFFFFF</color>
+
+    <color name="greyDark">#1d2217</color> <!--message in-->
+    <color name="grey">#888888</color>
+
+    <color name="orange">#df9034</color>
+    <color name="dullOrange">#e8b889</color>
+
 </resources>
